[Feat]  : MBTI API 구현
길이가 4인 숫자가 들어간 배열을 입력받으면 맞는 MBTI를 전달하는 API 제작

완료
