# back/src/modules/swaggerCocktail.json
@@ -34,6 +34,29 @@
           }
         }
       },
+      "/cocktailmbti": {
+        "post": {
+          "tags": ["Cocktail"],
+          "summary": "mbti 결과값 리턴",
+          "parameters": [
+            {
+              "name": "mbti",
+              "in": "body",
+              "description": "[w, x, y, z] => [(w > 0 = E: w < 0 = I), (w > 0 = N: w < 0 = S), (w > 0 = T: w < 0 = F), (w > 0 = J: w < 0 = P),]",
+              "required": true,
+              "type": "[integer]"
+            }
+          ],
+          "responses": {
+            "201": {
+              "description": "OK"
+            },
+            "404": {
+              "description": "Failed. Bad Request"
+            }
+          }
+        }
+      },
       "/cocktailrank": {
         "get": {
           "tags": ["Cocktail"],
