# back/src/routers/CocktailRouter.js
@@ -1,6 +1,7 @@
 import { Router } from "express";
 import { CocktailService } from "../services/CocktailService";
 import { verifyToken } from "../middlewares/verifyToken";
+import { type } from "express/lib/response";
 
 const CocktailRouter = Router();
 
@@ -39,6 +40,33 @@ CocktailRouter.get("/cocktails/:name", async (req, res, next) => {
 CocktailRouter.get("/cocktailrank", async (req, res, next) => {
   try {
     const cocktail = await CocktailService.rank10Cocktail();
+
+    if (cocktail == null) {
+      throw new Error("데이터를 불러오는 데 실패했습니다.");
+    }
+
+    res.status(200).json(cocktail);
+
+  } catch (error) {
+    next(error);
+  }
+});
+
+CocktailRouter.get("/cocktailmbti", async (req, res, next) => {
+  try {
+    console.log(req)
+
+    if (req.body == null) {
+      throw new Error("body에 데이터가 없습니다.");
+    }
+
+    const { mbti } = req.body;
+
+    if ( typeof mbti !== "object") {
+      throw new Error("데이터는 배열이어야 합니다.");
+    }
+
+    const cocktail = await CocktailService.mbtiCheck({ mbti });
 
     if (cocktail == null) {
       throw new Error("데이터를 불러오는 데 실패했습니다.");
